<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tournamentEntryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTournament"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_marginTop="15sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="280dp"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/labelDateEntry"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/labelDate"
              android:layout_marginTop="10sp"
              android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <DatePicker android:id="@+id/datePicker" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginBottom="20sp" />   

    <TextView
        android:id="@+id/tournamentFormatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelFormat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<RadioGroup android:id="@+id/radioEliminationGroup"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" 
			    android:layout_marginTop="10sp">
		<RadioButton android:id="@+id/radioSingle"
					 android:layout_width="wrap_content"
			    	 android:layout_height="wrap_content"
			    	 android:text="@string/labelSingleFormat" />
		<RadioButton android:id="@+id/radioDouble"
					 android:layout_width="wrap_content"
			    	 android:layout_height="wrap_content"
			    	 android:text="@string/labelDoubleFormat" 
			    	 android:checked="true" />		    
	</RadioGroup>

</LinearLayout>